<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/reminder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_title_hint"
        android:inputType="textCapSentences"
        android:maxLength="50" />

    <EditText
        android:id="@+id/reminder_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_description_hint"
        android:inputType="textMultiLine|textCapSentences"
        android:maxLines="4"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_name_hint"
        android:inputType="textCapSentences"
        android:maxLength="100"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/select_location_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_location"
        android:layout_marginTop="8dp" />

</LinearLayout>